fixing wrong padding in header

--- a/src/components/AssetsPage/AssetsPage.scss
+++ b/src/components/AssetsPage/AssetsPage.scss
@@ -1,9 +1,9 @@
 .page-wrapper {
-  max-width: 1024px;
+  max-width: calc(1024px - 26px);
   min-height: calc(100vh - 16px - 80px - 60px - 16px);
   margin: auto;
   @media only screen and (max-width: 1024px) {
-    margin: 8px;
+    margin: 16px;
   }
   margin-top: 16px;
 }
