--- a/src/components/AssetsPage/AssetsPageHeader/AssetsPageHeader.scss
+++ b/src/components/AssetsPage/AssetsPageHeader/AssetsPageHeader.scss
@@ -6,12 +6,11 @@
   .assets-header-wrapper {
     display: flex;
     color: white;
-    max-width: 1024px;
+    max-width: 954px;
+    padding: 0 36px;
     margin: auto;
     text-decoration: none;
     height: 50px;
-    padding-left: 35px;
-    padding-right: 46px;
     align-items: center;
     justify-content: space-between;
   }
