--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -21,7 +21,6 @@
     margin: auto;
     text-decoration: none;
     height: 54px;
-    padding-right: 10px;
     align-items: center;
   }
 
@@ -78,7 +77,7 @@
 }
 
 .logo {
-  margin-left: 18px;
+  margin-left: 16px;
   width: 112px;
   min-width: 112px;
   height: 54px;
